[gd_scene load_steps=21 format=2]

[ext_resource path="res://Actors/Interactables/EnergyGate/EnergyGate.gd" type="Script" id=1]
[ext_resource path="res://Actors/Interactables/EnergyGate/HitParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Interactables/EnergyGate/TopEnd.gd" type="Script" id=3]
[ext_resource path="res://Assets/Spritesheets/robot.v1.png" type="Texture" id=4]
[ext_resource path="res://Assets/ShaderEffects/RippleSource/RippleSource.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Interactables/EnergyGate/BottomEnd.gd" type="Script" id=6]
[ext_resource path="res://Actors/Interactables/EnergyGate/GateSparks.gd" type="Script" id=7]
[ext_resource path="res://Actors/Interactables/EnergyGate/EnergyGateCell.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Animation" id=2]
resource_name = "Off"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=3]
resource_name = "On"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="GDScript" id=4]
script/source = "extends Node2D


export (float) var speed;
export (float) var radius;
export (float) var amplitude;
export (float) var pulses;

onready var shader = $Shader.get_material()

func _process(delta):
	shader.set_shader_param(\"speed\", speed)
	shader.set_shader_param(\"radius\", radius)
	shader.set_shader_param(\"amplitude\", amplitude)
	shader.set_shader_param(\"pulses\", pulses)
	shader.set_shader_param(\"scale\", get_viewport().size*2)
	$Shader.scale = get_viewport().size"

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float speed;
uniform float radius;
uniform float amplitude;
uniform float pulses;
uniform vec2 scale;

void fragment()  {
	float PI = 3.14159265359;
	vec2 origin = vec2(0.5);
	
	vec2 pos = (UV - origin)*scale;
	float x = clamp(length(pos), 0.0, radius)/radius;
	float cur_amp = amplitude*cos(x*PI/2.0)*sin(x*2.0*PI*pulses - TIME*2.0*PI*speed);
	
	vec2 dir = normalize(pos);
	vec2 mod_uv = dir*cur_amp/scale;
	
	COLOR = texture(SCREEN_TEXTURE, SCREEN_UV + mod_uv);
}

"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/speed = null
shader_param/radius = null
shader_param/amplitude = null
shader_param/pulses = null
shader_param/scale = null

[sub_resource type="Animation" id=7]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=8]
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="GDScript" id=9]
script/source = "extends Node2D


export (float) var speed;
export (float) var radius;
export (float) var amplitude;
export (float) var pulses;

onready var shader = $Shader.get_material()

func _process(delta):
	shader.set_shader_param(\"speed\", speed)
	shader.set_shader_param(\"radius\", radius)
	shader.set_shader_param(\"amplitude\", amplitude)
	shader.set_shader_param(\"pulses\", pulses)
	shader.set_shader_param(\"scale\", get_viewport().size*2)
	$Shader.scale = get_viewport().size"

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = SubResource( 5 )
shader_param/speed = null
shader_param/radius = null
shader_param/amplitude = null
shader_param/pulses = null
shader_param/scale = null

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0.05, 0.05 )
colors = PoolColorArray( 1, 0.309804, 0.470588, 1, 1, 0.309804, 0.470588, 0 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 2, 40 )

[node name="EnergyGate" type="Node2D"]
z_index = -5
script = ExtResource( 1 )
gate_height = 4
active = true
direction = "Vertical"
hit_particles = ExtResource( 2 )

[node name="Sparks" type="Node2D" parent="."]

[node name="TopEnd" type="StaticBody2D" parent="Sparks" groups=[
"blocks",
]]
editor/display_folded = true
position = Vector2( 0, -16 )
scale = Vector2( 1, -1 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Sparks/TopEnd"]
position = Vector2( 0, -8 )
texture = ExtResource( 4 )
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 224, 48, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sparks/TopEnd"]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sparks/TopEnd"]
anims/Off = SubResource( 2 )
anims/On = SubResource( 3 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sparks/TopEnd"]
position = Vector2( 0, -12 )
rotation = -1.5708
emitting = false
amount = 24
lifetime = 0.25
local_coords = false
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="RippleSource" parent="Sparks/TopEnd" instance=ExtResource( 5 )]
editor/display_folded = true
z_index = 10
script = SubResource( 4 )
speed = 8.0
radius = 48.0
amplitude = 3.0
pulses = 3.0

[node name="Shader" parent="Sparks/TopEnd/RippleSource" index="1"]
material = SubResource( 6 )

[node name="BottomEnd" type="StaticBody2D" parent="Sparks" groups=[
"blocks",
]]
editor/display_folded = true
position = Vector2( 0, 64 )
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="Sparks/BottomEnd"]
position = Vector2( 0, -8 )
texture = ExtResource( 4 )
hframes = 3
region_enabled = true
region_rect = Rect2( 0, 224, 48, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sparks/BottomEnd"]
visible = false
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sparks/BottomEnd"]
anims/Off = SubResource( 7 )
anims/On = SubResource( 8 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Sparks/BottomEnd"]
position = Vector2( 0, -12 )
rotation = -1.5708
scale = Vector2( 1, -1 )
emitting = false
amount = 24
lifetime = 0.25
local_coords = false
spread = 90.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
color = Color( 1, 0.309804, 0.470588, 1 )

[node name="RippleSource" parent="Sparks/BottomEnd" instance=ExtResource( 5 )]
editor/display_folded = true
z_index = 10
script = SubResource( 9 )
speed = 8.0
radius = 48.0
amplitude = 3.0
pulses = 3.0

[node name="Shader" parent="Sparks/BottomEnd/RippleSource" index="1"]
material = SubResource( 10 )

[node name="GateSparks" type="CPUParticles2D" parent="Sparks"]
position = Vector2( 0, 24 )
emitting = false
amount = 4
lifetime = 4.0
randomness = 1.0
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 32 )
spread = 180.0
gravity = Vector2( 0, 250 )
initial_velocity = 150.0
initial_velocity_random = 0.7
color_ramp = SubResource( 11 )
script = ExtResource( 7 )

[node name="Hitbox" type="Area2D" parent="Sparks"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sparks/Hitbox"]
position = Vector2( 0, 24 )
shape = SubResource( 12 )

[node name="EnergyGateCell" parent="." instance=ExtResource( 8 )]
active = true
[connection signal="area_entered" from="Sparks/Hitbox" to="." method="on_hitbox_area_entered"]
[connection signal="body_entered" from="Sparks/Hitbox" to="." method="on_hitbox_body_entered"]

[editable path="Sparks/TopEnd/RippleSource"]

[editable path="Sparks/BottomEnd/RippleSource"]
